--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <title>Home Page</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <link rel="icon" href="https://i.ibb.co/L0wMnWb/expanse.png">
 </head>
 
 <body class="bg-black w-full">
@@ -17,13 +18,13 @@
             onclick="logout()">
             <div class="flex h-full w-full items-center justify-center rounded-full bg-gray-900">Log Out</div>
         </button>
-        <h1 class="text-white font-sans text-xl" id="emaildisplay"></h1>
+        <h1 class="text-white font-sans text-xl" id="emaildisplay">Login & Register To Show Your Account Details</h1>
     </nav>
     <!-- navbar ends -->
     <!-- mainhead -->
     <h1 class=" w-full ms-10 font-sans text-transparent bg-clip-text bg-white font-bold text-2xl 
      text-center mt-10 md:mt-0 to-slate-700 md:text-5xl m-[8px] md:w-[600px] h-auto md:ms-[500px]"
-        id="usernamedisplay"></h1>
+        id="usernamedisplay">Login & Register To Show Your Account Details</h1>
     <!-- mainhead ends -->
     <!-- background color -->
     <div
@@ -32,7 +33,7 @@
     <!-- background color ends -->
     <!-- main transparent -->
     <div
-        class="ms-[100px] absolute top-[30%] left-[8%] flex flex-wrap space-y-5 md:space-y-0 md:space-x-5 md:mt-10 md:ms-[400px]">
+        class="my-10 ms-[100px] absolute top-[30%] left-[8%] flex flex-wrap space-y-5 md:space-y-0 md:space-x-5 md:mt-10 md:ms-[400px]">
         <div class="bg-gradient-to-r from-blue-400 via-blue-600 to-indigo-500 w-auto p-7 rounded-lg">
             <h1 class="text-white font-sans text-2xl p-2 font-bold">Total Balance</h1>
             <h1 class="text-white font-sans text-2xl p-2 font-bold" id="totalbalance">Add</h1>
@@ -43,7 +44,7 @@
         </div>
     </div>
     <div
-        class="my-4 absolute top-[73%] left-[20%] md:top-[53%] md:left-[21%] flex flex-wrap space-y-6 md:space-y-0 md:space-x-5 md:mt-10">
+        class="my-20 absolute top-[73%] left-[20%] md:top-[53%] md:left-[21%] flex flex-wrap space-y-6 md:space-y-0 md:space-x-5 md:mt-10">
         <div class="p-[20px] bg-[white]/40 z-10 w-auto h-3/6 md:p-[40px] rounded-3xl md:rounded-2xl">
             <div class="w-auto h-auto flex flex-wrap flex-col space-y-4">
                 <label for="" class="text-2xl text-slate-200 font-semibold text-center">Add Income</label>
@@ -79,7 +80,7 @@
             </div>
         </div>
     </div>
-    <div class="top-[150%] left-[47%] my-4 absolute md:top-[94%] md:left-[47%]">
+    <div class="my-10 top-[140%] left-[47%] my-4 absolute md:top-[94%] md:left-[47%]">
         <button type="button"
             class="h-10 w-32 m-[10px] items-center rounded-full bg-gradient-to-r from-blue-300 via-blue-600 to-indigo-600 p-[1.5px] text-white"
             onclick="deleteaccount()">
@@ -91,7 +92,7 @@
         class="hidden md:block top-[200%] text-white text-center md:top-[106%] md:left-[38%] absolute text-4xl font-bold">
         Income and Expense Details</h1>
     <!-- main transparent ends -->
-    <div class="ms-2 mt-[350px] w-auto space-y-10 flex flex-wrap md:space-x-8 md:ms-[285px] md:mt-0 md:space-y-0">
+    <div class=" my-3 ms-2 mt-[350px] w-auto space-y-10 flex flex-wrap md:space-x-8 md:ms-[285px] md:mt-0 md:space-y-0">
         <table class="md:w-auto text-sm text-left text-gray-500 dark:text-gray-400 rounded-lg">
             <caption
                 class="p-5 text-lg font-semibold text-left rtl:text-right text-gray-900 bg-white dark:text-white dark:bg-gray-800 rounded-t-lg">
@@ -126,7 +127,7 @@
             </tbody>
         </table>
     </div>
-    <h1 class="text-white text-center my-4 mt-14 text-4xl font-bold">Expense Pie-Chart</h1>
+    <h1 class="text-white text-center my-8 mt-14 text-4xl font-bold">Expense Pie-Chart</h1>
     <div class="text-center">
         <button type="button"
             class="h-10 w-32 m-[10px] items-center rounded-full bg-gradient-to-r from-blue-300 via-blue-600 to-indigo-600 p-[1.5px] text-white"
