--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <title>Login Page</title>
 </head>
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="icon" href="https://i.ibb.co/L0wMnWb/expanse.png">
 
 <body class="bg-black"> 
     <!-- mainhead -->
